force-app/main/default/objects/FieloEE__News__c/fields/FieloEE__Category__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__Category__c</fullName>
    <description>Deprecated Field</description>
    <label>zz_deprecated_Category</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>FieloEE__Type__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Default</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>