force-app/main/default/objects/FieloEE__News__c/fields/FieloEE__CategoryItem__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__CategoryItem__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Category Item</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>FieloEE__Category__c.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>CategoryItem</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>FieloEE__Category__c</referenceTo>
    <relationshipLabel>Content feeds</relationshipLabel>
    <relationshipName>Content_feeds</relationshipName>
    <type>Lookup</type>
</CustomField>