force-app/main/default/objects/FieloEE__News__c/fields/FieloEE__Component__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__Component__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The component through which this content feed will be showed.</description>
    <inlineHelpText>Enter the component that will show this content feed.</inlineHelpText>
    <label>Component</label>
    <referenceTo>FieloEE__Component__c</referenceTo>
    <relationshipName>News</relationshipName>
    <type>Lookup</type>
</CustomField>