force-app/main/default/objects/FieloEE__News__c/fields/FieloEE__ExternalLink__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__ExternalLink__c</fullName>
    <description>The URL to which this content feed will redirect when clicked.</description>
    <inlineHelpText>Set the URL to which this content feed will redirect.</inlineHelpText>
    <label>External Link</label>
    <type>Url</type>
</CustomField>