force-app/main/default/objects/FieloEE__News__c/fields/FieloEE__ExtractText__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__ExtractText__c</fullName>
    <description>A short description of the content feed.</description>
    <inlineHelpText>Enter a short description for this content feed.</inlineHelpText>
    <label>Extract Text</label>
    <type>TextArea</type>
</CustomField>