force-app/main/default/objects/FieloEE__News__c/fields/FieloEE__Image__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__Image__c</fullName>
    <formula>"&lt;img src=\" servlet/servlet.FileDownload?file=" &amp; FieloEE__AttachmentId__c &amp; "\"/&gt;"</formula>
    <inlineHelpText>Enter the ID of the image file to be added to this content feed.</inlineHelpText>
    <label>Image</label>
    <type>Text</type>
</CustomField>