force-app/main/default/objects/FieloEE__News__c/fields/FieloEE__IsActive__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__IsActive__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checking this option will make this content feed active and it will show in the members&#39; portal.</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>