force-app/main/default/objects/FieloEE__News__c/fields/FieloEE__Order__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__Order__c</fullName>
    <description>The relative position of this content feed.</description>
    <inlineHelpText>Set the position for this content feed.</inlineHelpText>
    <label>Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>