force-app/main/default/objects/FieloEE__News__c/fields/FieloEE__QuantityComments__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__QuantityComments__c</fullName>
    <defaultValue>0</defaultValue>
    <description>The number cf comments for this content feed.</description>
    <inlineHelpText>Enter a title that will appear on top of this content feed.</inlineHelpText>
    <label>QuantityComments</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>