force-app/main/default/objects/FieloEE__News__c/fields/FieloEE__QuantityLikes__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__QuantityLikes__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>Enter the number of comments of this content feed.</inlineHelpText>
    <label>Quantity Likes</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>