force-app/main/default/objects/FieloEE__News__c/fields/FieloEE__RedemptionRule__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__RedemptionRule__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Deprecated Field</description>
    <label>Segment</label>
    <referenceTo>FieloEE__RedemptionRule__c</referenceTo>
    <relationshipLabel>Content feed</relationshipLabel>
    <relationshipName>News</relationshipName>
    <type>Lookup</type>
</CustomField>