force-app/main/default/objects/FieloEE__News__c/fields/FieloEE__Type__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__Type__c</fullName>
    <description>The type to which this content feed belongs.</description>
    <inlineHelpText>Set the type of this content feed.</inlineHelpText>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>News</fullName>
            </value>
            <value>
                <fullName>FAQ</fullName>
            </value>
            <value>
                <fullName>Event</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>