force-app/main/default/objects/FieloEE__News__c/listViews/FieloEE__All.listView-meta.xml
<ListView>
    <fullName>FieloEE__All</fullName>
    <columns>NAME</columns>
    <columns>FieloEE__Title__c</columns>
    <columns>FieloEE__Type__c</columns>
    <columns>FieloEE__PublishDate__c</columns>
    <columns>FieloEE__IsActive__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>