force-app/main/default/objects/FieloEE__News__c/listViews/FieloEE__All_Content_feeds.listView-meta.xml
<ListView>
    <fullName>FieloEE__All_Content_feeds</fullName>
    <columns>NAME</columns>
    <columns>FieloEE__Title__c</columns>
    <columns>FieloEE__Component__c</columns>
    <columns>FieloEE__CategoryItem__c</columns>
    <columns>FieloEE__Type__c</columns>
    <columns>FieloEE__PublishDate__c</columns>
    <columns>FieloEE__IsActive__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All Content feeds</label>
    <language>en_US</language>
</ListView>